--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
     <div>
     <div id="chatbox">
     <p class="botText">
-    <span>Hi! I'm Python-BOT your personal ChatBot</span>
+    <span>Hi! \my name OG your personal ChatBot</span>
     </p>
     </div>
     <div id="userInput">
@@ -111,9 +111,7 @@
         $.get("/get", { msg: rawText }).done(function (data) {
         var botHtml = '<p class="botText"><span>' + data + "</span></p>";
         $("#chatbox").append(botHtml);
-        document
-        .getElementById("userInput")
-        .scrollIntoView({ block: "start", behavior: "smooth" });
+        document.getElementById("userInput").scrollIntoView({ block: "start", behavior: "smooth" });
         });
         }
         $("#textInput").keypress(function (e) {
